--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=demo
 
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/chatapp
+spring.datasource.url=jdbc:postgresql://localhost:5432/practice_spring_boot
 spring.datasource.username=$POSTGRES_USERNAME
 spring.datasource.password=$POSTGRES_PASSWORD
 spring.flyway.baselineOnMigrate=true
